--- a/index.html
+++ b/index.html
@@ -6,13 +6,122 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet">
-
-    <title>Hello, world!</title>
+    <style>
+      .navbar {
+        border-top: 1px solid rgba(3, 166, 120, 0.3);
+        border-bottom: 1px solid rgba(3, 166, 120, 0.3);
+      }
+      .nav .nav-link {
+        color: black;
+        font-weight: bold;
+      }
+    </style>
+    <title> Title goes here. </title>
   </head>
+
   <body>
-    <h1>Hello, world!</h1>
+    <nav class="navbar navbar-light bg-light navbar-expand">
+      <div class="navbar-nav">
+        <a href="" class="nav-item nav-link mx-4 fw-bold">LINK</a>
+        <a href="" class="nav-item nav-link mx-4 fw-bold">LINN</a>
+        <a href="" class="nav-item nav-link mx-4 fw-bold">LINL</a>
+        <a href="" class="nav-item nav-link mx-4 fw-bold">LINI</a>
+      </div>
+    </nav>
+
+    <div class="row mt-5">
+
+      <div class="col-3 bg-light">
+        <div class="container">
+          <nav class="nav flex-column">
+            <a href="" class="nav-link">components</a>
+            <a href="" class="nav-link">components</a>
+            <a href="" class="nav-link">components</a>
+            <a href="" class="nav-link">components</a>
+            <a href="" class="nav-link">components</a>
+            <a href="" class="nav-link">components</a>
+            <a href="" class="nav-link">components</a>
+            <a href="" class="nav-link">components</a>
+            <a href="" class="nav-link">components</a>
+            <a href="" class="nav-link">components</a>
+            <a href="" class="nav-link">components</a>
+            <a href="" class="nav-link">components</a>
+            <a href="" class="nav-link">components</a>
+          </nav>
+        </div>
+      </div>
+
+    <div class="col-9">
+      <div class="container">
+        <table class="table table-light table-hover table-bordered border-success">
+          <thead>
+            <tr>
+              <th>1</th>
+              <th>2</th>
+              <th>3</th>
+              <th>4</th>
+            </tr>
+          </thead>
+      
+          <tbody>
+            <tr>
+              <th>tdead</th>
+              <td>asdfasdf</td>
+              <td>asdfasdf</td>
+              <td>asdfasdf</td>
+            </tr>
+            <tr>
+              <th>tdead</th>
+              <td>asdfasdf</td>
+              <td>asdfasdf</td>
+              <td>asdfasdf</td>
+            </tr>
+            <tr>
+              <th>tdead</th>
+              <td>asdfasdf</td>
+              <td>asdfasdf</td>
+              <td>asdfasdf</td>
+            </tr>   
+          </tbody>   
+        </table>
+
+        <form class="mt-5" action="">   
+
+            <div class="my-3">
+              <label for="username" class="form-label">username</label>
+              <input type="text" class="form-control  border-success" id="username">
+            </div>
+
+            <div class="my-3">
+              <label for="password" class="form-label">password</label>
+              <input type="text" class="form-control border-success" id="password">
+            </div>
+
+            <div class="my-3">
+              <button class="btn btn-outline-success" type="button">submit</button>
+              <button class="btn btn-outline-success float-end" type="button">submit</button>
+            </div>
+
+        </form>    
+
+
+
+
+      </div>
+    </div>
+
+    </div>
+
+
+
+
+
+
+
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
 
   </body>
+
 </html>
